# Operating-Systems-Simulation-Programs

./: CMakeLists.txt  README.md  main.cpp
assets/: invite.ics
inc/: Colors.hpp  FCFS.hpp  LCSF.hpp  PageAlgorithm.hpp  PageAlgorithmTester.hpp  Task.hpp  TaskAlgorithmTester.hpp
inc/Page/: Page.hpp  PageAlgorithm.hpp  PageAlgorithmTester.hpp
inc/Page/Algorithms/: FIFO.hpp  LFU.hpp  LRU.hpp  MFU.hpp
inc/Task/: Task.hpp  TaskAlgorithm.hpp  TaskAlgorithmTester.hpp
inc/Task/Algorithms/: RoundRobin.hpp  SJF.hpp
pliki_testowe/: FCFS.txt  LFU.txt  LRU.txt  MFU.txt  RoundRobin.txt  SJF.txt
src/: FCFS.cpp  FIFO.cpp  LCSF.cpp  LFU.cpp  MFU.cpp  RoundRobin.cpp  SJF.cpp  Task.cpp  TaskAlgorithmTester.cpp
src/Page/: Page.cpp  PageAlgorithm.cpp  PageAlgorithmTester.cpp
src/Page/Algorithm/: FIFO.cpp  LFU.cpp  LRU.cpp  MFU.cpp
src/Task/: Task.cpp  TaskAlgorithmTester.cpp
src/Task/Algorithm/: FCFS.cpp  LCSF.cpp  SJF.cpp
